--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+/* Import slick carousel styles */
+@import "slick-carousel/slick/slick.css"; 
+@import "slick-carousel/slick/slick-theme.css";
+
 
 :root {
   --background: #ffffff;
