--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,10 @@
   --foreground: #171717;
 }
 
+html {
+  font-size: 15px;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
